fixed.blogapp

--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -1,3 +1,8 @@
-// Place all the styles related to the blogs controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+table{
+  table-layout:fixed;
+  width:100%;
+}
+
+td.blog_title{
+  word-wrap: break-word;
+}
